[project]
name = "un-cnames"
version = "0.1.0"
description = "UN Website Boilerplate"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ipykernel>=7.2.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "tldextract>=5.3.0",
]
